assets/css/style.css
:root {
    --green: #038749;

    --font-weight-normal: 400;
    --font-weight-semibold: 600;

    --d-space-sm: 8px;
    --d-space-md: 16px;
    --d-space-lg: 32px;
    --d-space-xl: 64px;
    --m-space-sm: 4px;
    --m-space-md: 8px;
    --m-space-lg: 16px;
    --m-space-xl: 32px;
}

* {
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: "Roboto", sans-serif;
    font-weight: var(--font-weight-normal);
    max-width: 100vw;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Fira Sans", sans-serif;
    font-weight: var(--font-weight-semibold);
}

a {
    color: inherit;
    text-decoration: none;
}

img {
    max-width: 100%;
}

/* Common Font Sizes */

html {
    font-size: 16px;
}

h1 {
    font-size: 4em;
}

h2 {
    font-size: 3em;
}

h3 {
    font-size: 2em;
}

@media (width < 1000px) {
    html {
        font-size: 13.5px;
    }

    h1 {
        font-size: 3em;
    }

    h2 {
        font-size: 2.5em;
    }

    h3 {
        font-size: 2em;
    }
}

p {
    line-height: 150%;
}

/*
=====================
 Utility Classes
=====================
*/

.button,
button {
    padding: 12px 20px;
    border-radius: 5px;
    font-weight: var(--font-weight-semibold);
    cursor: pointer;
}

a.button {
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.button-primary {
    background-color: var(--green);
    color: white;
}

.button-secondary {
    border: solid 1px var(--green);
    background-color: white;
    color: var(--green);
}

.background-off-color {
    background-color: #EFEFEF;
}

.background-dark {
    background-color: black;
    color: white;
}

.background-gradient {
    background: linear-gradient(180deg, #038749 0%, #02552E 30.22%, #01301A 68.69%, #012112 100%);
    color: white;
}

.text-green {
    color: var(--green);
}

.text-off-color {
    color: #656565;
}

.background-dark .text-off-color {
    color: #F7F7F7;
}

.divider {
    height: 1px;
    width: 650px;
    max-width: 80%;
    background-color: var(--green);
}

.flex-row {
    display: flex;
}

.flex-col {
    display: flex;
    flex-direction: column;
}

.flex-wrap {
    flex-wrap: wrap;
}

.items-center {
    align-items: center;
}

.items-start {
    align-items: start;
}

.justify-center {
    justify-content: center;
}

.text-center {
    text-align: center;
}

.full-width {
    width: 100%;
}

.half-width {
    width: 50%;
}

.mt-sm {
    margin-top: var(--d-space-sm);
}

.mt-md {
    margin-top: var(--d-space-md);
}

.mt-lg {
    margin-top: var(--d-space-lg);
}

.mt-xl {
    margin-top: var(--d-space-xl);
}

.pad-sm {
    padding: var(--d-space-sm);
}

.pad-md {
    padding: var(--d-space-md);
}

.pad-lg {
    padding: var(--d-space-lg);
}

.pad-xl {
    padding: var(--d-space-xl);
}

.gap-sm {
    gap: var(--d-space-sm);
}

.gap-md {
    gap: var(--d-space-md);
}

.gap-lg {
    gap: var(--d-space-lg);
}

.gap-xl {
    gap: var(--d-space-xl);
}

@media (width < 1000px) {
    .mt-sm {
        margin-top: var(--m-space-sm);
    }

    .mt-md {
        margin-top: var(--m-space-md);
    }

    .mt-lg {
        margin-top: var(--m-space-lg);
    }

    .mt-xl {
        margin-top: var(--m-space-xl);
    }

    .pad-sm {
        padding: var(--m-space-sm);
    }

    .pad-md {
        padding: var(--m-space-md);
    }

    .pad-lg {
        padding: var(--m-space-lg);
    }

    .pad-xl {
        padding: var(--m-space-xl);
    }

    .gap-sm {
        gap: var(--m-space-sm);
    }

    .gap-md {
        gap: var(--m-space-md);
    }

    .gap-lg {
        gap: var(--m-space-lg);
    }

    .gap-xl {
        gap: var(--m-space-xl);
    }
}

.round {
    border-radius: 5px;
}

.bound-text {
    max-width: 800px;
}

.logo-small {
    width: 150px;
    height: 150px;
}

@media (width < 1000px) {
    .logo-small {
        width: 80px;
        height: 80px;
    }
}

@media (width < 1000px) {
    .only-desktop {
        display: none;
    }
}

@media (width >= 1000px) {
    .only-mobile {
        display: none;
    }
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: var(--d-space-xl);
    padding: 64px;
}

@media (width < 1000px) {
    main {
        gap: var(--m-space-xl);
        padding: 32px;
    }
}

main > section {
    width: 100%;
}

/*
=============
 Navbar
=============
*/

#navbar-logo {
    position: relative;
    z-index: 1;
}

#navbar-mobile {
    position: relative;
    z-index: 2;
    align-items: center;
    justify-content: space-between;
}

#navbar-mobile-dropdown {
    background-color: white;
    position: fixed;
    padding: 16px;
    padding-top: 140px;
    top: 0;
    left: 0;
    width: 100vw;
    display: none;
    flex-direction: column;
    align-items: start;
    gap: 24px;
    color: var(--green);
}

#navbar-mobile-dropdown > .not-button {
    font-size: 20px;
    font-weight: var(--font-weight-semibold);
}

.expanded > #navbar-mobile-dropdown {
    display: flex;
}

#navbar-desktop {
    align-items: center;
    justify-content: space-between;
    padding-right: 32px;
}

@media screen and (width < 1000px) {
    #navbar-mobile {
        display: flex;
    }

    #navbar-desktop {
        display: none;
    }
}

@media screen and (width >= 1000px) {
    #navbar-mobile {
        display: none;
    }

    #navbar-desktop {
        display: flex;
    }
}

#hamburger {
    position: relative;
    z-index: 1;
    background: transparent;
    border: none;
}

/*
===========
 Heroes 
===========
*/

#home-hero {
    background-image: url("../img/hero-background.jpg");
}

#about-hero {
    background-image: url("../img/about-hero.jpg");
}

#tires-hero {
    background-image: url("../img/tires-hero.jpg");
}

.hero {
    background-size: cover;
    position: relative;
    color: white;
}

.hero > * {
    max-width: 100%;
}

.hero, #navbar-wrapper {
    padding: 32px;
}

.hero {
    padding-bottom: 112px;
}

#navbar-wrapper {
    padding-bottom: 0;
}

@media screen and (width < 1000px) {
    .hero, #navbar-wrapper {
        padding: 16px;
    }

    .hero {
        padding-bottom: 48px;
    }
}

.hero > div {
    position: relative;
    z-index: 1;
}

.hero > .overlay {
    position: absolute;
    z-index: 0;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.75);
}

/*
==============
 Home Page
==============
*/

/* Welcome */

#welcome > img {
    height: 400px;
    width: 400px;
}

#welcome-buttons {
    display: flex;
    flex-wrap: wrap;
}

@media (width < 1000px) {
    #welcome > div:first-child {
        align-items: center;
        text-align: center;
    }

    #welcome > img {
        display: none;
    }

    #welcome-buttons {
        flex-direction: column;
    }
}

/* Our Services */

#services-table {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

@media (width < 1000px) {
    #services-table {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #services-table h3 {
        font-size: 18px;
    }
}

/* Tires for Every Vehicle */

#tires-for {
    background-image: url("../img/rolling-tire.jpg");
    background-size: cover;
    position: relative;
    color: white;
    overflow: hidden;
}

#tires-for > div {
    position: relative;
    z-index: 1;
}

#tires-for > .overlay {
    position: absolute;
    z-index: 0;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.6);
}

/* What Our Customers Say */

#review-on-google {
    display: flex;
    gap: 16px;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 8px 64px;
}

#review-on-google > img {
    width: 230px;
}

#reviews {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    align-items: stretch;
}

#reviews > article > p {
    flex-grow: 1;
}

@media (width < 1000px) {
    #review-on-google {
        flex-direction: column;
        padding: 32px;
    }

    #reviews {
        display: flex;
        justify-content: center;
    }

    #reviews > article {
        display: none;
    }

    #reviews > article:first-child {
        display: flex;
        width: 300px;
        max-width: 100%;
    }
}


/* Get Back on the Road */

#shop-image {
    width: 500px;
}

/*
=================
 About Us Page
=================
*/

#meet-the-team > h2, #brands-we-work-with > h2 {
    padding-left: 100px;
    padding-right: 100px;
    padding-bottom: 32px;
    border-bottom: solid 1px var(--green);
}

#meet-the-team img {
    max-height: 450px;
}

@media (width < 1000px) {
    #meet-the-team > div {
        flex-direction: column;
        align-items: center;
    }

    #meet-the-team > div:last-child {
        flex-direction: column-reverse;
    }

    #meet-the-team h2, #meet-the-team h3 {
        text-align: center;
    }

    #meet-the-team .contact {
        justify-content: center;
    }
}

#values-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

@media (width < 1000px) {
    #values-grid {
        grid-template-columns: 1fr;
    }
}

/*
==============
 Tires Page
==============
*/

#brands-grid {
    width: 100%;
    gap: 64px;
}

@media (width >= 1000px) {
    #brands-grid {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    }
}

@media (width < 1000px) {
    #brands-grid {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}

#brands-grid > div {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 16px;
    background-color: #D9D9D9;
    border-radius: 100%;
    height: 200px;
    width: 200px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

#brands-grid > div > img {
    width: 100%;
}

#tire-classes img {
    width: 525px;
}

@media (width < 1000px) {
    #tire-classes > .divider {
        display: none;
    }

    #tire-classes > div:first-child, #tire-classes > div:last-child {
        text-align: center;
        flex-direction: column;
        align-items: center;
    }
}

#contact-iframe {
    width: 100%;
    height: 700px;
    border: none;
}

/*
===========
 Footer
===========
*/

.footer-column-header {
    font-size: 1.25em;
    border-bottom: solid 1px var(--green);
    padding-bottom: 8px;
    width: 128px;
}

/* Mobile Footer */
@media screen and (width < 1000px) {
    footer {
        display: flex;
        flex-direction: column;
        gap: var(--m-space-xl);
        align-items: center;
    }

    .footer-column {
        align-items: center;
    }

    .footer-column-header {
        text-align: center;
    }
}

/* Tablet and Larger Footer */
@media screen and (width >= 1000px) {
    footer {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        gap: var(--d-space-md);
    }

    .footer-column {
        align-items: start;
    }
}

